# lavs

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python-test.yml
app/: main.py  test.db
app/configurations/: configuration.py  database.yaml  root_dir.py
app/connections/: connection.py  connection_factory.py  duckdb_connection.py
app/database/: database_manager.py
app/models/: write_patch_model.py
app/models/crud/: read_all_models.py  read_model.py  write_model.py
app/models/requests/: application_and_version_model.py  application_name_model.py  request_model.py
app/queries/: create_version.py  delete_version.py  query.py  retrieve_latest_version.py  rollback_to_previous_patch_version.py
app/queries/crud/: retrieve_all.py
app/queries/patch_version/: create.py  create_patch.py  read.py  read_current_patch.py  rollback_to_previous_patch_version.py
app/queries/versions/: create_version.py  delete_version.py  retrieve_latest_version.py  retrieve_version_history.py
app/routers/: basic_crud.py  patch.py  versions.py
app/utils/: load_logger.py
database/: ddl.sql
database/duckdb/: build.py
tests/configurations/: test_root_dir.py
tests/connections/: test_connection_factory.py  test_duckdb_connection.py
tests/database/: test_database_manager.py
tests/models/crud/: test_application_and_version_model.py  test_application_name_model.py  test_read_model.py  test_request_model.py
tests/queries/: test_query.py
tests/queries/patch/: test_create_patch.py
(+4 files in other folders)
