[tool.poetry]
name = "app"
version = "0.1.0"
description = "Tooling to manage semantic versioning across decoupled build systems."
authors = ["John Aven <john.aven.phd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
duckdb = "^1.1.3"
pandas = "^2.2.3"
numpy = "^2.2.1"
pydantic = "^2.10.6"


[tool.poetry.group.test.dependencies]
nose2 = "^0.15.1"
bandit = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

